--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/custom.css">
 </head>
+
+<style>
+  body{
+    background-image: url("images/pexels-mălina-sîrbu-8841727.jpg");
+    background-repeat:no-repeat;
+    background-size: 1920px 1500px;
+  }
+  h1{
+    size: 190px;
+    
+  }
+</style>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">BIET Resellers</a>
@@ -21,7 +34,7 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Donate💖</a>
+              <a class="nav-link" href="donate.html">Donate💖</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,36 +58,40 @@
         </div>
       </nav>
 
-
+      <h1>
+        BIET Sellers
+      </h1>
       <div class="container">
         <div class="row">
           <div class="col-lg">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="./images/daa.png" alt="Card image cap">
-                <div class="card-body">
+                <a class="card-body">
                   <h5 class="card-title">Design and Analysis of Algorithm</h5>
                   <p class="card-text">Owner Name: Ankit Kumar  Original Price: Rs. 630 <br>Listing Price: 500 <br> Age of book: 3 Years<br> Availability: Yes </p>
-                  <button type="button" class="btn btn-secondary btn-lg" >Buy Now</button>                </div>
+                  <a href="daa_book.html"> <button type="button" class="btn btn-secondary btn-lg" >Buy Now</button></a>
+                
               </div>
           </div>
           <div class="col-sm">
             <div class="col-lg">
               <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="./images/daa.png" alt="Card image cap">
+                  <img class="card-img-top" src="./images/DSA_made_easy.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Design and Analysis of Algorithm</h5>
-                    <p class="card-text">Owner Name: Ankit Kumar  Original Price: Rs. 630 <br>Listing Price: 500 <br> Age of book: 3 Years<br> Availability: Yes </p>
-                    <button type="button" class="btn btn-secondary btn-lg" >Buy Now</button>                </div>
-                </div>
+                    <p class="card-text">Owner Name: Ankit Kumar<br>Original Price: Rs. 630 <br>Listing Price: 500 <br> Age of book: 3 Years<br> Availability: Yes </p>
+                    <button  type="button" class="btn btn-secondary btn-lg" >Buy Now</button> 
+                  </div>
+                </div>  
             </div>
           </div>
           <div class="col-sm">
             <div class="col-lg">
               <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="./images/daa.png" alt="Card image cap">
+                  <img class="card-img-top" src="./images/basicElectrical.png" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Design and Analysis of Algorithm</h5>
-                    <p class="card-text">Owner Name: Ankit Kumar  Original Price: Rs. 630 <br>Listing Price: 500 <br> Age of book: 3 Years<br> Availability: Yes </p>
+                    <h5 class="card-title">Basic Electrical Engineering  (English, Paperback, Cathey Jimmie)</h5>
+                    <p class="card-text">Owner Name: Ankit Kumar  Original Price: Rs. 693 <br>Listing Price: 250 <br> Age of book: 1 Years<br> Availability: Yes </p>
                     <button type="button" class="btn btn-secondary btn-lg" >Buy Now</button>                </div>
                 </div>
             </div>
